--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,8 @@
 <body class="">
   <!-- header -->
   <header class="p-8">
-    <div class="container mx-auto lg:relative flex flex-col lg:flex-row lg:justify-between gap-y-4 lg:gap-y-0 ">
+    <div
+      class="container mx-auto lg:relative flex flex-col items-center lg:flex-row lg:justify-end gap-y-4 lg:gap-y-0 ">
       <!-- logo Left Side -->
       <div class="flex justify-center lg:justify-center w-fit">
         <a href="#">
